test/errors/type/collections/set/__bxor1.yasl
echo mt.lookup(collections.set(), .__bxor)(collections.set(), true)
